# signal-rs

./: Cargo.toml
examples/: convolution.rs  plot.rs
src/: core.rs  lib.rs
src/core/: generator.rs  signal.rs
